[gd_scene load_steps=3 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 137.0
margin_top = 60.0
margin_right = 183.0
margin_bottom = 120.0

[node name="TitleContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 46.0
margin_bottom = 12.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
margin_right = 46.0
margin_bottom = 12.0
text = "Action RPG"

[node name="VButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 46.0
margin_bottom = 60.0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/VButtonContainer"]
margin_right = 46.0
margin_bottom = 12.0
text = "Start"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/VButtonContainer"]
margin_top = 16.0
margin_right = 46.0
margin_bottom = 28.0
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/VButtonContainer"]
margin_top = 32.0
margin_right = 46.0
margin_bottom = 44.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/VButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VButtonContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
